# zeroday

./: .gitignore  README.md
zeroday/: CMakeLists.txt  CMakePresets.json  vcpkg.json
zeroday/engine/: CMakeLists.txt
zeroday/engine/assets/json/: materials.json
zeroday/engine/assets/materialJSON/: materials.json
zeroday/engine/assets/textureJSON/: textures.json
zeroday/engine/include/CallBack/: CallBack.h
zeroday/engine/include/Core/: Assert.h  AssetManager.h  Debug.h  Engine.h  EngineState.h  File.h  Services.h  Timer.h  Window.h
zeroday/engine/include/ECS/: ComponentStorage.h  Entity.h  EntityManager.h  World.h  component_registry.h  freelist_registry.h
zeroday/engine/include/ECS/Components/: CameraComponent.h  LightComponent.h  MaterialComponent.h  MeshComponent.h  ModelComponent.h  NameComponent.h  TransformComponent.h
zeroday/engine/include/Editor/: Editor.h  EditorPanel.h  EditorState.h  InspectorPanel.h  MenuBarPanel.h  SceneHierarchyPanel.h
zeroday/engine/include/Editor/Panel/: EditorPanel.h  InspectorPanel.h  MenuBarPanel.h  SceneHierarchyPanel.h
zeroday/engine/include/Editor/State/: EditorState.h
zeroday/engine/include/Graphics/OpenGL/: BufferManager.h  GPU_buffers.h  Macros.h  Shader.h  ssbo_types.h
zeroday/engine/include/Graphics/OpenGL/Camera/: Camera.h  CameraInput.h
zeroday/engine/include/Graphics/OpenGL/Lighting/: Light.h
zeroday/engine/include/Graphics/OpenGL/Material/: material.h  material_lib.h
zeroday/engine/include/Graphics/OpenGL/Mesh/: MeshData3D.h  MeshFactory.h  MeshLibrary.h
zeroday/engine/include/Graphics/OpenGL/Model/: Model.h  ModelLoader.h
zeroday/engine/include/Graphics/OpenGL/Renderer/: GPURenderer.h  RenderCommand.h  RenderContext.h  RenderState.h  Renderer.h  Renderer3D.h  SceneRenderer.h
zeroday/engine/include/Graphics/OpenGL/Textures/: TextureManager.h  Textures.h  stb_image.h
zeroday/engine/include/Graphics/OpenGL/Transformations/: Transformations.h
zeroday/engine/include/ImGui/: ImGuiLayer.h  ImGuiObjectState.h  ImGuiScoped.h  MyGuizmo.h  TransformGizmo.h
zeroday/engine/include/Input/: Input.h  InputComponent.h  InputComponentFactory.h  InputContext.h
zeroday/engine/include/Math/: Math.h  RayMath.h
zeroday/engine/include/Scene/: Components.h  Entity.h  Scene.h  SceneObjectFactory.h  World.h  camera_system.h  light_system.h  material_system.h  systems.h  transform_system.h
zeroday/engine/include/Utility/: buffer_updater.h
zeroday/engine/include/core/: Assert.h  AssetManager.h  Base.h  Compat.h  Config.h.in  Engine.h  EngineConfig.h.in  File.h  Logger.h  Services.h  UUID.h  Window.h
zeroday/engine/shaders/config/: shaders.json
zeroday/engine/shaders/opengl/: basic.frag  basic.vert  batch_builder.comp  dirty_tracking.comp  transform_update.comp
zeroday/engine/shaders/opengl/Core/: buffers.glsl
zeroday/engine/shaders/opengl/common/: batch_builder.comp  batch_builder.glsl  camera_data.comp  camera_data.glsl  command_generation.comp  command_generation.glsl  common.comp  common.glsl  constants.comp  constants.glsl  dirty_tracker.comp  draw_command.glsl  light_data.comp  light_data.glsl  lighting_calc.comp  lighting_calc.glsl  material_data.comp  material_update.comp  pbr_calc.glsl  transform_data.comp  transform_data.glsl  transform_update.comp
zeroday/engine/shaders/opengl/compute/: command_generation.comp  frustum_cull.comp  lighting_calc.comp  pbr_calc.comp
zeroday/engine/shaders/opengl/core/: attributes.glsl  buffers.glsl
zeroday/engine/shaders/opengl/main/: main.frag  main.vert
zeroday/engine/src/CallBack/: CallBack.cpp
zeroday/engine/src/Core/: AssetManager.cpp  Engine.cpp  EngineState.cpp  File.cpp  Logger.cpp  Services.cpp  Timer.cpp  UUID.cpp  Window.cpp
zeroday/engine/src/Editor/: Editor.cpp  EditorPanel.cpp  InspectorPanel.cpp  MenuBarPanel.cpp  SceneHierarchyPanel.cpp
zeroday/engine/src/Editor/Panel/: EditorPanel.cpp  InspectorPanel.cpp  MenuBarPanel.cpp  SceneHierarchyPanel.cpp
zeroday/engine/src/Graphics/OpenGL/: BufferManager.cpp  Shader.cpp
zeroday/engine/src/Graphics/OpenGL/Camera/: Camera.cpp  CameraInput.cpp
zeroday/engine/src/Graphics/OpenGL/Lighting/: Light.cpp
zeroday/engine/src/Graphics/OpenGL/Material/: material.cpp  material_lib.cpp
zeroday/engine/src/Graphics/OpenGL/Mesh/: MeshData3D.cpp  MeshFactory.cpp  MeshLibrary.cpp
zeroday/engine/src/Graphics/OpenGL/Model/: Model.cpp  ModelLoader.cpp
zeroday/engine/src/Graphics/OpenGL/Renderer/: GPURenderer.cpp  RenderContext.cpp  RenderState.cpp  Renderer.cpp  Renderer3D.cpp  SceneRenderer.cpp
zeroday/engine/src/Graphics/OpenGL/Textures/: TextureManager.cpp  Textures.cpp  stb_image.cpp
zeroday/engine/src/Graphics/OpenGL/Transformations/: Transformations.cpp
zeroday/engine/src/ImGui/: ImGuiLayer.cpp  ImGuiObjectState.cpp  ImGuiScoped.cpp  MyGuizmo.cpp  TransformGizmo.cpp
zeroday/engine/src/ImGui/Backend/: imgui_impl_opengl3.cpp
zeroday/engine/src/Input/: Input.cpp  InputComponentFactory.cpp  InputContext.cpp
zeroday/engine/src/Math/: Math.cpp
zeroday/engine/src/Scene/: Components.cpp  Entity.cpp  Scene.cpp  SceneObjectFactory.cpp  TransformSystem.cpp
zeroday/engine/src/Utility/: buffer_updater.cpp
zeroday/engine/src/core/: AssetManager.cpp  Debug.cpp  Engine.cpp  File.cpp  Logger.cpp  Services.cpp  UUID.cpp  Window.cpp
zeroday/game/: CMakeLists.txt
zeroday/game/include/Core/: main.h
zeroday/game/include/core/: Game.hpp
zeroday/game/src/Core/: Game.cpp  main.cpp
zeroday/game/src/core/: Game.cpp  main.cpp
zeroday/game/src/objects/: GameObject.cpp
